# ros2-companion-robot

./: .gitattributes  .gitignore  LICENSE  README.md
src/companion_robot_behaviors/: CMakeLists.txt  package.xml
src/companion_robot_behaviors/config/: battery.yaml  diagnostics.yaml  docking.yaml  mission.yaml  patrol.yaml
src/companion_robot_behaviors/launch/: docking.launch.py  energy_patrol.launch.py  patrol.launch.py
src/companion_robot_behaviors/scripts/: auto_docking.py  autonomy_diagnostics.py  battery_simulator.py  mission_manager.py  waypoint_patrol.py
src/companion_robot_description/: CMakeLists.txt  package.xml
src/companion_robot_description/launch/: display.launch.py
src/companion_robot_description/rviz/: companion_robot.rviz
src/companion_robot_description/urdf/: companion_robot.urdf.xacro
src/companion_robot_gazebo/: CMakeLists.txt  package.xml
src/companion_robot_gazebo/config/: moving_obstacle.yaml  slam.yaml
src/companion_robot_gazebo/launch/: arena.launch.py  mapping.launch.py
src/companion_robot_gazebo/maps/: README.md  companion_arena.pgm  companion_arena.yaml
src/companion_robot_gazebo/rviz/: mapping.rviz  simulation.rviz
src/companion_robot_gazebo/scripts/: moving_obstacle_controller.py  wasd_teleop.py
src/companion_robot_gazebo/worlds/: companion_arena.sdf
src/companion_robot_navigation/: CMakeLists.txt  package.xml
src/companion_robot_navigation/config/: nav2_params.yaml
src/companion_robot_navigation/launch/: navigation.launch.py
src/companion_robot_navigation/rviz/: companion_navigation.rviz
src/companion_robot_perception/: CMakeLists.txt  package.xml
src/companion_robot_perception/config/: dock_marker.yaml
src/companion_robot_perception/scripts/: dock_marker_detector.py
