<?xml version="1.0"?>
<package format="3">
  <name>companion_robot_behaviors</name>
  <version>0.1.0</version>
  <description>High-level autonomous behaviours for the companion robot.</description>

  <maintainer email="mdaninas@gmail.com">mdaninas</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>action_msgs</exec_depend>
  <exec_depend>companion_robot_navigation</exec_depend>
  <exec_depend>companion_robot_perception</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
