<?xml version="1.0"?>
<package format="3">
  <name>companion_robot_gazebo</name>
  <version>0.1.0</version>
  <description>Gazebo Sim worlds and launch files for the companion robot.</description>

  <maintainer email="mdaninas@gmail.com">mdaninas</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>companion_robot_description</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>rosgraph_msgs</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
