<?xml version="1.0"?>
<package format="3">
  <name>companion_robot_perception</name>
  <version>0.1.0</version>
  <description>Camera perception nodes for the companion robot.</description>

  <maintainer email="mdaninas@gmail.com">mdaninas</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
